--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.19",
     "@types/pg": "^8.16.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "better-auth": "^1.4.10",
     "better-auth-localization": "^2.2.3",
     "class-variance-authority": "^0.7.1",
@@ -39,6 +40,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.2",
     "resend": "^6.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
